[package]
name = "octree-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.0"
rayon = "1.5.0"
toml = "0.5"
num_cpus = "1.13.0"
serde = { version = "1.0.120", features = ["derive"] }
rand = "0.8.2"
image = "0.23.12"
packed_simd = { version = "0.3.4", package = "packed_simd_2" }
nalgebra = "0.26.2"
ordered-float = "2.0.1"
pbr = "1.0.4"
parking_lot = "0.11.1"
crossbeam = "0.8.0"
minifb = "0.19.1"
math =  { git = "https://github.com/gillett-hernandez/rust_cg_math" }
win32_notification = "0.1.0"
array-init = "2.0.0"

[build-dependencies]
serde = { version = "1.0.120", features = ["derive"] }
serde_json = "1.0.61"

[lib]
path = "src/lib.rs"

[profile.dev]
opt-level = 3
panic='abort'
debug=true

[profile.test]
opt-level = 0

[profile.release]
opt-level = 3
debug = true
lto = 'fat'
incremental = false
debug-assertions = false
codegen-units = 1
panic = 'abort'
